# FastAPI

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
app/: main.py
app/adapters/http/: api.py
app/core/: config.py  database.py  logging.py  middleware.py
app/domain/: exceptions.py
